menu page started and img alt

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Bakery Website" />
+
+  <!-- set a theme color for the address bar -->
+  <meta name="theme-color">
+  
   <!--
     manifest.json provides metadata used when your web app is installed on a
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
